# Omnimathematics-Penalty-Compliance

./: .gitignore  AGPL-3.0  Calculus_of_Compliance.tex  DMCA_TAKEDOWN_POLICY  GPL-3.0  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LEGAL_NOTICES  LICENSE  MANIFEST.md  Omnimathematics_Framework_Visualization.ipynb  README.md  SOLUTION_SUMMARY.md  SUMMARY.md  digest.txt  setup.py
.github/workflows/: active-stability-controller-tests.yml
active_stability_controller/: README.md  pyproject.toml
active_stability_controller/examples/: numpy_demo.py
active_stability_controller/src/active_stability/: __init__.py  baseline.py  controller.py  metrics.py  torch_adapter.py
active_stability_controller/tests/: test_controller.py  test_metrics.py
compliance_framework/: INTEGRATION_README.md  README.md  setup.py
compliance_framework/examples/: advanced_example.py  basic_example.py  integration_example.py
compliance_framework/src/compliance_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
compliance_framework/tests/: test_framework.py
docs/: api-reference.md  architecture.md  usage.md
examples/: basic_usage.py  framework_demonstration.py  imaginary_realm_demo.py
media/: README.md
penalty_framework/: __init__.py  gaussian_wells.py  imaginary_realm_safety.py  imaginary_triad.py  integrity_firewall.py  main.py  multiphysics_validation.py  penalty_objective.py  t3_boundary.py
scripts/: generate_commit_images.py  run_commit_images.sh  run_tests.py
tests/: test_omnimathematics_framework.py  test_penalty_objective.py
(+7 files in other folders)
