[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active-stability-controller"
version = "0.1.0"
description = "Closed-loop optimizer supervision using gradient population geometry"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
torch = ["torch>=2.1"]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]
